[package]
name = "librevision"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["dylib"]

[dependencies]
atomicwrites = { version = "0.4.4" }
camino = { version = "1.1.9" }
closest = { version = "0.1.0", path = "../closest" }
config = { version = "0.1.0", path = "../config" }
conflux = { version = "0.1.0", path = "../conflux" }
content-type = { version = "0.1.0", path = "../content-type" }
cub-types = { version = "0.1.0", path = "../cub-types" }
derivations = { version = "0.1.0", path = "../derivations" }
dylo.workspace = true
dylo-runtime = "2.5.0"
errhandling = { version = "0.1.0", path = "../errhandling" }
eyre.workspace = true
facet-json = "0.11.1"
facet-pretty = "0.13.0"
fs = { version = "0.1.0", path = "../fs" }
futures-core = "0.3.31"
image = { version = "0.1.0", path = "../image" }
itertools = { version = "0.14.0" }
markdown = { version = "0.1.0", path = "../markdown" }
merde = { workspace = true }
noteyre = { version = "0.1.0", path = "../noteyre" }
rayon = { version = "1.10.0" }
redb = { version = "2.4.0" }
seahash = { version = "4.1.0" }
search = { version = "0.1.0", path = "../search" }
svg = { version = "0.1.0", path = "../svg" }
template = { version = "0.1.0", path = "../template" }
time = { version = "0.3.41" }
tokio = { workspace = true }
tracing = { workspace = true }
uffmpeg = { version = "0.1.0", path = "../uffmpeg" }
ulid = { version = "1.2.1" }
wildmatch = { version = "2.4.0" }

[features]
default = ["impl"]
impl = []
