[package]
name = "librevision"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
atomicwrites = { version = "0.4.4" }
camino = { version = "1.1.9" }
closest = { version = "0.1.0", path = "../closest" }
libconfig = { version = "0.1.0", path = "../libconfig" }
conflux = { version = "0.1.0", path = "../../crates/conflux" }
content-type = { version = "0.1.0", path = "../content-type" }
cub-types = { version = "0.1.0", path = "../cub-types" }
derivations = { version = "0.1.0", path = "../derivations" }
liberrhandling = { version = "0.1.0", path = "../liberrhandling" }
eyre.workspace = true
facet-json = "0.16.0"
facet-pretty = "0.16.0"
libfs = { version = "0.1.0", path = "../libfs" }
futures-core = "0.3.31"
libimage = { version = "0.1.0", path = "../libimage" }
itertools = { version = "0.14.0" }
libmarkdown = { version = "0.1.0", path = "../libmarkdown" }
merde = { workspace = true }
rayon = { version = "1.10.0" }
redb = { version = "2.4.0" }
seahash = { version = "4.1.0" }
libsearch = { version = "0.1.0", path = "../libsearch" }
libsvg = { version = "0.1.0", path = "../libsvg" }
libtemplate = { version = "0.1.0", path = "../libtemplate" }
time = { version = "0.3.41" }
tokio = { workspace = true }
tracing = { workspace = true }
uffmpeg = { version = "0.1.0", path = "../../crates/uffmpeg" }
ulid = { version = "1.2.1" }
wildmatch = { version = "2.4.0" }
config-types = { version = "0.1.0", path = "../config-types" }
image-types = { version = "0.1.0", path = "../image-types" }
template-types = { version = "0.1.0", path = "../template-types" }
markdown-types = { version = "0.1.0", path = "../markdown-types" }
autotrait = "0.1.12"
