[package]
name = "libsearch"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
conflux = { path = "../../crates/conflux" }
eyre = { workspace = true }
html-escape = { version = "0.2.13" }
indicium = { version = "0.6.5", features = [
    "simple",
], default-features = false }
tantivy = { version = "0.22.0" }
tracing = { workspace = true }
percent-encoding = "2.3.1"
config-types = { version = "0.1.0", path = "../config-types" }
autotrait = "0.1.11"
