[package]
name = "libsvg"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
quick-xml = { version = "0.37.4" }
conflux = { path = "../../crates/conflux" }
tokio = { workspace = true, features = ["time", "process", "sync"] }
tempfile = { version = "3.19.1" }
camino = { version = "1.1.9" }
base64 = { version = "0.22.1" }
futures-core = "0.3.31"
bytes = "1.10.1"
eyre.workspace = true
autotrait = "0.1.12"
config-types = { version = "0.1.0", path = "../config-types" }
image-types = { version = "0.1.0", path = "../image-types" }
lightningcss = "1.0.0-alpha.65"

[dev-dependencies]
insta = "1.43.0"
regex = "1.11.1"
